# charmlibs

./: .docs-migration-plan.md  .gitignore  .interfaces.json  .local-justfile  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  PLAN.md  PLAN2.md  README.md  SECURITY.md  docs.just  interface-test-requirements.txt  interface.just  justfile  pyproject.toml  test-requirements.txt  thin-justfile-notes.md
.example/: README.md  pyproject.toml
.example/docs/: tutorial.md
.example/docs/explanation/: a-charmlibs-example-explanation.md
.example/docs/how-to/: a-charmlibs-example-how-to.md
.example/src/charmlibs/example/: __init__.py  _version.py
.example/tests/functional/: test_version.py
.example/tests/integration/: conftest.py  pack.sh  test_integration.py  test_version.py
.example/tests/integration/charm/: common.py  k8s.yaml  pyproject.toml
.example/tests/integration/charms/: actions.yaml  common.py  pyproject.toml
.example/tests/unit/: conftest.py  test_scenario.py  test_version.py  test_version_in_charm.py
.template/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
.template/{{ cookiecutter.project_slug }}/docs/: tutorial.md
.template/{{ cookiecutter.project_slug }}/docs/explanation/: a-{{ cookiecutter.__dist_pkg }}-explanation.md
.template/{{ cookiecutter.project_slug }}/docs/how-to/: a-{{ cookiecutter.__dist_pkg }}-how-to.md
.template/{{ cookiecutter.project_slug }}/testing/: README.md  pyproject.toml
.template/{{ cookiecutter.project_slug }}/tests/functional/: test_version.py
.template/{{ cookiecutter.project_slug }}/tests/integration/: conftest.py  pack.sh  test_integration.py  test_version.py
.template/{{ cookiecutter.project_slug }}/tests/unit/: conftest.py  test_scenario.py  test_version.py  test_version_in_charm.py
interfaces/.example/testing/: README.md  pyproject.toml
interfaces/k8s_backup_target/: CHANGELOG.md  README.md  pyproject.toml
interfaces/k8s_backup_target/interface/v0/: README.md  interface.yaml  schema.py
interfaces/k8s_backup_target/tests/unit/: test_backup_target.py
interfaces/tls-certificates/: CHANGELOG.md  README.md  pyproject.toml
interfaces/tls-certificates/docs/: tutorial.md
interfaces/tls-certificates/docs/discourse-json/: _navigation.json  ca-trust-best-practices.json  certificate-renewal.json  common-name-and-sans-attributes.json  getting-started.json  library-differences-v3-to-v4.json  library-versions.json  private-key-label-change.json  recommended-config-options.json  securing-api-communication.json  securing-internal-communication.json  security.json  tls-certificates-interface.json
interfaces/tls-certificates/docs/explanation/: certificate-renewal.md  common-name-and-sans-attributes.md  design.md  library-design.md  library-differences-v3-to-v4.md  security.md  tls-certificates-interface.md
interfaces/tls-certificates/docs/how-to/: choose-common-name-and-sans.md  configure-certificate-requests.md  expose-certificate-config-options.md
interfaces/tls-certificates/docs/reference/: ca-trust-best-practices.md  library-versions.md  private-key-label-change.md  recommended-config-options.md  securing-api-communication.md  securing-internal-communication.md
interfaces/tls-certificates/interface/v0/: README.md  interface.yaml
interfaces/tls-certificates/interface/v1/: README.md  interface.yaml  schema.py
interfaces/tls-certificates/schema/v1/: schema.py
interfaces/tls-certificates/testing/: pyproject.toml
interfaces/tls-certificates/tests/integration/: conftest.py  test_integration_v1.py  test_tls_certificates.py
interfaces/tls-certificates/tests/unit/: certificate_validation.py  provider_charm.py  test_provides.py  test_requires.py
nginx/: README.md  pyproject.toml
nginx/src/charmlibs/nginx/: __init__.py  config.py  nginx.py  nginx_prometheus_exporter.py  tls_config_mgr.py  tracer.py  utils.py
nginx/tests/: typecheck.py
nginx/tests/integration/: conftest.py  pack.sh  test_meta.py  test_nginx.py
nginx/tests/unit/: conftest.py  test_container_managers.py  test_nginx.py  test_nginx_config_write.py
pathops/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
pathops/docs/: tutorial.md
pathops/docs/explanation/: design.rst
pathops/src/charmlibs/pathops/: __init__.py  _container_path.py  _errors.py  _fileinfo.py  _functions.py  _local_path.py  _types.py
pathops/tests/: typecheck.py
pathops/tests/functional/: .pebble  conftest.py  setup.sh  teardown.sh  test_container_path.py  test_functions.py  test_local_path.py  utils.py
pathops/tests/integration/: conftest.py  pack.sh  test_meta.py  test_pathops.py
pathops/tests/integration/charms/: pack.sh
pathops/tests/integration/juju/: test_meta.py  test_pathops.py
pathops/tests/integration/pebble/: test_container_path.py  test_functions.py  test_local_path.py
pathops/tests/unit/: test_container_path.py  test_functions.py  test_local_path.py
rollingops/: CHANGELOG.md  README.md  pyproject.toml
rollingops/src/charmlibs/rollingops/: __init__.py  _rollingops_manager.py  _version.py
rollingops/tests/integration/: test_etcd_rolling_ops.py
rollingops/tests/unit/: conftest.py  test_etcd_rollingops_in_charm.py
snap/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
snap/src/charmlibs/snap/: __init__.py  _client.py  _client_sockets.py  _errors.py  _functions.py  _snap.py  _snapd.py  _snapd_aliases.py  _utils.py  (+7 more)
snap/tests/: typecheck.py
snap/tests/functional/: conftest.py  helpers.py  setup.sh  test_alive.py  test_client.py  test_functions.py  test_snap.py  test_snapd_aliases.py  test_snapd_apps.py  test_snapd_conf.py  test_snapd_interfaces.py  test_snapd_local.py  test_snapd_logs.py  test_snapd_snaps.py  test_version.py
snap/tests/integration/: test_version.py
snap/tests/unit/: collect_fixtures.sh  conftest.py  fake_snapd.py  test_client.py  test_errors.py  test_functions.py  test_snap.py  test_snapd.py  test_snapd_aliases.py  test_snapd_apps.py  test_snapd_conf.py  test_snapd_interfaces.py  test_snapd_logs.py  test_snapd_snaps.py  test_version.py  test_version_in_charm.py
snap/tests/unit-old/: test_snap.py
(+781 files in other folders)
