[project]
name = "charmlibs-example"
description = "The charmlibs.example package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Charm Tech team at Canonical"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    # "ops",
]

[dependency-groups]
lint = [  # installed in addition to unit, functional, and integration for just lint example
    # "typing_extensions",
]
unit = [  # installed for just unit example
    "ops[testing]",
]
functional = [  # installed for just functional example
]
integration = [  # installed for just integration example
    "jubilant",
]

[project.urls]
"Repository" = "https://github.com/canonical/charmlibs"
"Issues" = "https://github.com/canonical/charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/example/__init__.py"

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]  # correctly sort local imports in tests

[tool.pyright]
extend = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.10"  # check no python > 3.10 features are used

[tool.charmlibs.functional]
ubuntu = []  # ubuntu versions to run functional tests with, e.g. "24.04" (defaults to just "latest")
pebble = []  # pebble versions to run functional tests with, e.g. "v1.0.0", "master" (defaults to no pebble versions)
sudo = false  # whether to run functional tests with sudo (defaults to false)

[tool.charmlibs.integration]
tags = []  # tags to run integration tests with, e.g. "22.04", "24.04" (defaults to running once with no tag)
