[project]
name = "charmlibs-nginx"
description = "Nginx sidecar abstractions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Observability team at Canonical Ltd."},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops[testing]>=2.19,<4",
    "crossplane",
    "pytest==8.3.5",
]

[dependency-groups]
lint = [
    "typing_extensions",
]
unit = [
    "pytest==8.3.5",
]
integration = [
    "jubilant",
    "pytest-jubilant"
]

[project.urls]
"Repository" = "https://github.com/canonical/charmtech-charmlibs"
"Issues" = "https://github.com/canonical/charmtech-charmlibs/issues"

[build-system]
requires = [
    "setuptools>=60",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = ["src/charmlibs/nginx/_version.txt"]}

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]  # correctly sort local imports in tests

[tool.pyright]
extend = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.8"  # check no python > 3.8 features are used

[tool.charmlibs.functional]
pebble = ["v1.1.1","master"]
ubuntu = ["22.04", "latest"]
