[project]
name = "charmlibs-pathops"
description = "A pathlib-like interface for Juju K8s charms to interact with files in their workload container."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Charm Tech team at Canonical Ltd."},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops>=2.19,<4",
]

[dependency-groups]
lint = [
    "typing_extensions",
]
unit = []
functional = []
integration = [
    "jubilant",
]

[project.urls]
"Documentation" = "https://documentation.ubuntu.com/charmlibs/reference/charmlibs/pathops/"
"Repository" = "https://github.com/canonical/charmlibs"
"Issues" = "https://github.com/canonical/charmlibs/issues"
"Changelog" = "https://github.com/canonical/charmlibs/blob/main/pathops/CHANGELOG.md"

[build-system]
requires = [
    "setuptools>=60",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = ["src/charmlibs/pathops/_version.txt"]}

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]  # correctly sort local imports in tests

[tool.pyright]
extends = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.charmlibs.functional]
pebble = ["v1.1.1","master"]
ubuntu = ["22.04", "latest"]

[tool.charmlibs.integration]
# tags to run integration tests with (defaults to running once with no tag, i.e. tags = [''])
# Available in CI in tests/integration/pack.sh and integration tests as CHARMLIBS_TAG
tags = ["22.04", "24.04"]  # The pathops pack.sh script uses CHARMLIBS_TAG to determine which base to pack for.
