[project]
name = "charmlibs-rollingops"
description = "The charmlibs.rollingops package."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name="The Data Platform team at Canonical"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops>=2.23.1,<4",
    "charmlibs-interfaces-tls-certificates>=1.8.1",
    "charmlibs-pathops>=1.2.1",
    "dpcharmlibs-interfaces==1.0.0",
    "tenacity",
    "pydantic>=2.12.5",
    "shortuuid>=1.0.13",
]

[dependency-groups]
lint = [  # installed for `just lint rollingops` (unit, functional, and integration are also installed)
    # "typing_extensions",
]
unit = [  # installed for `just unit rollingops`
    "ops[testing]",
]
functional = [  # installed for `just functional rollingops`
]
integration = [  # installed for `just integration rollingops`
    "jubilant",
    "tenacity",
    "charmlibs-apt",
]

[project.urls]
"Documentation" = "https://canonical.com/juju/docs/charmlibs/reference/charmlibs/rollingops"
"Repository" = "https://github.com/canonical/charmlibs/tree/main/rollingops"
"Issues" = "https://github.com/canonical/charmlibs/issues"
"Changelog" = "https://github.com/canonical/charmlibs/blob/main/rollingops/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/rollingops/_version.py"

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/integration"]  # correctly sort local imports in tests

[tool.ruff.lint.extend-per-file-ignores]
# add additional per-file-ignores here to avoid overriding repo-level config
"tests/**/*" = [
    # "E501",  # line too long
]

[tool.pyright]
extends = "../pyproject.toml"
include = ["src", "tests"]
exclude = ["tests/integration/.tmp/**"]
pythonVersion = "3.12"  # check no python > 3.12 features are used

[tool.charmlibs.functional]
ubuntu = []  # ubuntu versions to run functional tests with, e.g. "24.04" (defaults to just "latest")
pebble = []  # pebble versions to run functional tests with, e.g. "v1.0.0", "master" (defaults to no pebble versions)
sudo = false  # whether to run functional tests with sudo (defaults to false)

[tool.charmlibs.integration]
# tags to run integration tests with (defaults to running once with no tag, i.e. tags = [''])
# Available in CI in tests/integration/pack.sh and integration tests as CHARMLIBS_TAG
tags = []  # Not used by the pack.sh and integration tests generated by the template
