[project]
name = "charmlibs-snap"
description = "The charmlibs.snap package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Charm Tech team at Canonical"},
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = []

[dependency-groups]
lint = [  # installed for `just lint snap` (unit, functional, and integration are also installed)
    "typing_extensions",
]
unit = [
    "pytest",
]
functional = [
    "pytest",
]
integration = []

[project.urls]
"Documentation" = "https://canonical.com/juju/docs/charmlibs/reference/charmlibs/snap/"
"Repository" = "https://github.com/canonical/charmlibs/tree/main/snap"
"Issues" = "https://github.com/canonical/charmlibs/issues"
"Changelog" = "https://github.com/canonical/charmlibs/blob/main/snap/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/snap/_version.py"

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]  # correctly sort local imports in tests

[tool.pyright]
extends = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.10"  # check no python > 3.10 features are used

[tool.charmlibs.functional]
ubuntu = ["22.04", "24.04", "26.04"]  # ubuntu versions to run functional tests with, e.g. "24.04" (defaults to just "latest")
pebble = []  # pebble versions to run functional tests with, e.g. "v1.0.0", "master" (defaults to no pebble versions)
sudo = true  # whether to run functional tests with sudo (defaults to false)
