[project]
name = "{{ cookiecutter.__dist_pkg }}"
description = "The {{ cookiecutter.__import_pkg }} package."
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"
authors = [
    {name="{{ cookiecutter.author }}"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    # Libraries should use clear but wide dependency bounds to avoid overly constraining charms.
    # Ops 3 is backwards compatible with Ops 2, but drops Python 3.8 support.
    # Ops 3 has new features not present in Ops 2.
    # To review the changes in Ops 3, see https://github.com/canonical/operator/releases.
    # Set the dependency bounds according to the features your library needs.
    # "ops>=2.23.1,<4",
]
{% if cookiecutter._interface %}
[project.optional-dependencies]
testing = ["{{ cookiecutter.__dist_pkg }}-testing==0.0.0.dev0"]
{% endif %}
[dependency-groups]
lint = [  # installed for `just lint {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}` (unit, functional, and integration are also installed)
    # "typing_extensions",
]
unit = [  # installed for `just unit {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}`
    "ops[testing]",
{%- if cookiecutter._interface %}
    "{{ cookiecutter.__dist_pkg }}[testing]",
{%- endif %}
]
functional = [  # installed for `just functional {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}`
]
integration = [  # installed for `just integration {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}`
    "jubilant",
]

[project.urls]
"Documentation" = "https://documentation.ubuntu.com/charmlibs/reference/charmlibs/{{ cookiecutter.__path_prefix }}{{ cookiecutter.__canonical_name }}"
"Repository" = "https://github.com/canonical/charmlibs/tree/main/{{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}"
"Issues" = "https://github.com/canonical/charmlibs/issues"
"Changelog" = "https://github.com/canonical/charmlibs/blob/main/{{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/{{ cookiecutter.__path_prefix }}{{ cookiecutter.__pkg}}/_version.py"
{% if cookiecutter._interface %}
[tool.uv.sources]
{{ cookiecutter.__dist_pkg }}-testing = { path = "testing", editable = true }
{% endif %}
[tool.ruff]
extend = "{{ '../' if cookiecutter._interface else '' }}../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]  # correctly sort local imports in tests

[tool.ruff.lint.extend-per-file-ignores]
# add additional per-file-ignores here to avoid overriding repo-level config
"tests/**/*" = [
    # "E501",  # line too long
]

[tool.pyright]
extends = "{{ '../' if cookiecutter._interface else '' }}../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "{{ cookiecutter.min_python_version }}"  # check no python > {{ cookiecutter.min_python_version }} features are used

[tool.charmlibs.functional]
ubuntu = []  # ubuntu versions to run functional tests with, e.g. "24.04" (defaults to just "latest")
pebble = []  # pebble versions to run functional tests with, e.g. "v1.0.0", "master" (defaults to no pebble versions)
sudo = false  # whether to run functional tests with sudo (defaults to false)

[tool.charmlibs.integration]
# tags to run integration tests with (defaults to running once with no tag, i.e. tags = [''])
# Available in CI in tests/integration/pack.sh and integration tests as CHARMLIBS_TAG
tags = []  # Not used by the pack.sh and integration tests generated by the template
