[project]
name = "charmlibs-interfaces-k8s-backup-target"
description = "The charmlibs.interfaces.k8s-backup-target package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Charm Tech team at Canonical"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]
dependencies = [
    "ops",
    "pydantic",
]

[dependency-groups]
lint = [
]
unit = [
    "ops[testing]",
    "pytest",
]
functional = [
]
integration = [
]

[project.urls]
"Repository" = "https://github.com/canonical/charmlibs"
"Issues" = "https://github.com/canonical/charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/interfaces/k8s_backup_target/_version.py"

[tool.ruff]
extend = "../../pyproject.toml"
src = ["src", "tests/unit", "tests/functional", "tests/integration"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.extend-per-file-ignores]
"./**/schema.py" = [
    "CPY",  # copyright
    "D",  # docs
    "E501",  # line too long
]
"tests/**/*" = [
    "E501",
]

[tool.pyright]
extends = "../../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.charmlibs.functional]
ubuntu = []
pebble = []
sudo = false

[tool.charmlibs.integration]
tags = []
