[project]
name = "{{ cookiecutter.__dist_pkg }}-testing"
description = "The {{ cookiecutter.__import_pkg }}_testing package."
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"
authors = [
    {name="{{ cookiecutter.author }}"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops[testing]",
    "{{ cookiecutter.__dist_pkg }}==0.0.0.dev0",
]

[dependency-groups]
lint = [  # installed for `just lint {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}/testing` (unit, functional, and integration are also installed)
    # "typing_extensions",
]
unit = [  # installed for `just unit {{ cookiecutter.__path_prefix }}{{ cookiecutter.project_slug }}/testing`
]
functional = []  # group required by CI, but functional tests aren't recommended for testing packages
integration = []  # group required by CI, but integration tests aren't recommended for testing packages

[project.urls]
"Repository" = "https://github.com/canonical/charmlibs"
"Issues" = "https://github.com/canonical/charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/{{ cookiecutter.__path_prefix }}{{ cookiecutter.__pkg}}_testing/_version.py"

[tool.uv.sources]
{{ cookiecutter.__dist_pkg }} = { path = "../", editable = true }

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit"]  # correctly sort local imports in tests

[tool.pyright]
extends = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "{{ cookiecutter.min_python_version }}"  # check no python > {{ cookiecutter.min_python_version }} features are used
