[project]
name = "charmlibs-interfaces-example-interface-testing"
description = "The charmlibs.interfaces.example_interface_testing package."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name="The Charm Tech team at Canonical"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "ops[testing]",
    "charmlibs-interfaces-example-interface==0.0.0.dev0",
]

[dependency-groups]
lint = [  # installed for `just lint interfaces/example-interface/testing` (unit, functional, and integration are also installed)
    # "typing_extensions",
]
unit = [  # installed for `just unit interfaces/example-interface/testing`
]

[project.urls]
"Repository" = "https://github.com/canonical/charmlibs"
"Issues" = "https://github.com/canonical/charmlibs/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/charmlibs"]

[tool.hatch.version]
path = "src/charmlibs/interfaces/example_interface_testing/_version.py"

[tool.uv.sources]
charmlibs-interfaces-example-interface = { path = "../", editable = true }

[tool.ruff]
extend = "../pyproject.toml"
src = ["src", "tests/unit"]  # correctly sort local imports in tests

[tool.pyright]
extends = "../pyproject.toml"
include = ["src", "tests"]
pythonVersion = "3.10"  # check no python > 3.10 features are used
