# common pyproject.toml file symlinked by these charms

[project]
name = "integration-test-charm"
version = "0.0.0.dev0"
description = "Charm for integration tests."
requires-python = ">={{ cookiecutter.min_python_version }}"
dependencies = [
    "ops==3.*",
    "charmlibs-{{ cookiecutter.project_slug }}",
]

[tool.uv.sources]
"charmlibs-{{ cookiecutter.project_slug }}" = { path = "package" }