# common pyproject.toml file symlinked by these charms

[project]
name = "integration-test-charm"
version = "0.0.0.dev0"
description = "Charm for integration tests."
requires-python = ">=3.10"
dependencies = [
    "ops==3.*",
    "charmlibs-interfaces-example-interface",
]

[tool.uv.sources]
"charmlibs-interfaces-example-interface" = { path = "library", editable = true }
