# common pyproject.toml file symlinked by these charms

[project]
name = "integration-test-charm"
version = "0.0.0.dev0"
description = "Charm for integration tests."
requires-python = ">={{ cookiecutter.min_python_version }}"
dependencies = [
    "ops==3.*",
    "charmlibs-{{ 'interfaces-' if cookiecutter._interface else '' }}{{ cookiecutter.project_slug }}",
]

[tool.uv.sources]
"charmlibs-{{ 'interfaces-' if cookiecutter._interface else '' }}{{ cookiecutter.project_slug }}" = { path = "library", editable = true }
